# The-Pre-Flight-Check

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  README.md  SECURITY.md  gemini-extension.json  install.ps1  install.sh  pyproject.toml  run-pipeline.py  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: README.md  pre-flight-check.rb
adapters/: README.md
adapters/copilot/: copilot-instructions.md
adapters/cursor/: pre-flight-check.mdc
adapters/kiro/: pre-flight-check.md
adapters/roo/: pre-flight-check.md
adapters/windsurf/: pre-flight-check.md
bucket/: README.md  pre-flight-check.json
docs/: PROMO.md
docs/vault/: .gitignore  AI Tool Adapters.md  CI.md  CLI.md  Distribution Channels.md  Doctor & Stage Selection.md  Engine.md  Homebrew Tap.md  Installer.md  No Escape Hatches.md  Node.js Runtime.md  Pipeline Stages.md  Pre-Flight Check.md  Python Runtime.md  README.md  Release Pipeline.md  Runtime Detection.md  Supported AI Tools.md  Website.md
docs/vault/.obsidian/: app.json  graph.json
examples/: README.md
examples/node-broken/: README.md  package.json  tsconfig.json
examples/node-broken/src/: index.ts
examples/python-broken/: .gitignore  README.md  pyproject.toml
examples/python-broken/src/: calc.py
site/: index.html  main.js  social-card.html  styles.css
skills/pre-flight-check/: SKILL.md
skills/pre-flight-check/scripts/: run-pipeline.py
src/pre_flight_check/: __init__.py  __main__.py  cli.py  engine.py  installer.py
src/pre_flight_check/_data/: __init__.py
tests/: conftest.py  test_engine.py
